src/test/ui/issues/issue-30123.stderr
error[E0599]: no function or associated item named `new_undirected` found for type `issue_30123_aux::Graph<i32, i32>` in the current scope
  --> $DIR/issue-30123.rs:7:33
   |
LL |     let ug = Graph::<i32, i32>::new_undirected();
   |                                 ^^^^^^^^^^^^^^ function or associated item not found in `issue_30123_aux::Graph<i32, i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
